HNG Task 1